Edit the name of team from "GUEST" to "AWAY"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div>
-                <h3 id="title">GUEST</h3>
+                <h3 id="title">AWAY</h3>
                 <h1 class="counter" id="guestcounter-el">0</h1>
                 <div class="increment-btn">
                     <button onclick="plusoneguest()">+1</button>
